--- a/editor.css
+++ b/editor.css
@@ -14,6 +14,10 @@
     right: -0px;
     z-index: 1;
 }
+.svg {
+  background-color:#EEE;
+  border: 1px solid #666;
+}
 .overlay {
   position: absolute;
   top: 0;
